--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
   <head> 
     <meta charset='utf-8' /> 
-    <title>Evodio Garcia Portfolio</title> 
+    <title>Evodio Garcia Portfolio</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head> 
 <body>
   <div id='root'></div>
