--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset='utf-8' /> 
     <title>Evodio Garcia Portfolio</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <!-- <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet"> -->
 </head> 
 <body>
   <div id='root'></div>
