--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head> 
     <meta charset='utf-8' /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Evodio Garcia Portfolio</title>
+    <meta name="Description" content="Developer: Evodio Garcia, Evodio Garcia's Personal Portfolio where some of his projects are showcased and more information about him.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <!-- <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet"> -->
 </head> 
