wip, adds google analytics, img for default page and smaller imgs for projects

--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head> 
-    <meta charset='utf-8' /> 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Evodio Garcia Portfolio</title>
-    <meta name="Description" content="Developer: Evodio Garcia, Evodio Garcia's Personal Portfolio where some of his projects are showcased and more information about him.">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <!-- <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet"> -->
-</head> 
+
+<head>
+  <meta charset='utf-8' />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Evodio Garcia Portfolio</title>
+  <meta name="Description"
+    content="Developer: Evodio Garcia, Evodio Garcia's Personal Portfolio where some of his projects are showcased and more information about him.">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-N5TTP3T');</script>
+  <!-- End Google Tag Manager -->
+</head>
+
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N5TTP3T" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div id='root'></div>
   <script src='../src/js/index.js'></script>
-  </body>
+</body>
+
 </html>
