adds new imgs, icons replace some imgs, new layout to about page, and css corrections

--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,19 @@
 <html lang="en">
 
 <head>
-  <meta charset='utf-8' />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Evodio Garcia Portfolio</title>
-  <meta name="Description"
-    content="Developer: Evodio Garcia, Evodio Garcia's Personal Portfolio where some of his projects are showcased and more information about him.">
-  <link 
-    rel="stylesheet" 
-    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
-    crossorigin="anonymous"
-  >
-
+  <meta name="description" content="Developer: Evodio Garcia, Evodio Garcia's Personal Portfolio where my projects are showcased.">
+  <meta name="keywords" content="Javascript, HTML, CSS, react.js, developer, Evodio Garcia, Evodio, software developer, front-end, front end, software developer">
+  <meta name="author" content="Evodio Garcia">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
 <body>
-  <div id='root'></div>
-  <script src='../src/js/index.js'></script>
+  <div id="root"></div>
+  <script src="../src/js/index.js"></script>
 </body>
 
 </html>
