--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Evodio Garcia Portfolio</title>
-  <meta name="description" content="Developer: Evodio Garcia, Evodio Garcia's Personal Portfolio where my projects are showcased.">
-  <meta name="keywords" content="Javascript, HTML, CSS, react.js, developer, Evodio Garcia, Evodio, software developer, front-end, front end, software developer">
+  <meta name="description" content="Software Developer: Evodio Garcia, Evodio Garcia's Personal Portfolio.">
+  <meta name="keywords" content="Javascript developer in San Diego">
   <meta name="author" content="Evodio Garcia">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link 
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+    crossorigin="anonymous"
+  />
+  <link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="../src/images/profile.jpg"
+  />
 </head>
 
 <body>
