--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Software Developer: Evodio Garcia, Evodio Garcia's Personal Portfolio.">
   <meta name="keywords" content="Javascript developer in San Diego">
   <meta name="author" content="Evodio Garcia">
+  <meta name="robots" content="noindex"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link rel="icon" type="image/png" sizes="32x32" href="../src/images/profile.jpg" />
