--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div id="root"></div>
-  <script src="../src/js/index.js"></script>
+  <script src="../src/js/index.js" type="module"></script>
 </body>
 
 </html>
